--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "katex": "^0.16.8",
     "lucide-react": "^0.263.0",
     "next": "^13.4.11",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
+    "react-latex-next": "^2.2.0",
     "sharp": "^0.32.3",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.3",
@@ -53,6 +55,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/katex": "^0.16.2",
     "@types/node": "^20.4.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
